:fix: fix page loader, fix 'new' items & better spacing

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -6,7 +6,6 @@
   background: $header_background
   width: 100%
   text-align: center
-  position: relative
   z-index: 1
   box-shadow: 5px 16px 15px -10px rgba(0,0,0,0.15)
   &__img
@@ -48,8 +47,11 @@ section.head
     margin: 15px
     font-family: $content-font
     margin: 0
-    padding: 10px 20px 15px 20px
+    padding: 10px 40px 15px 20px
     text-align: center
+
+  .action-button-container
+    margin-top: 50px
 
 /* Target both tablet and desktop */
 @media (min-width: 992px)
