--- a/sass/loader.sass
+++ b/sass/loader.sass
@@ -32,7 +32,7 @@
   width: 50px
   display: block
   margin: auto
-  animation: hideLoaderAnimation 4s forwards
+  animation: hideLoaderAnimation 5s forwards
 
 header, main, footer
   position: absolute
