--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -59,7 +59,7 @@
         padding: 5px 8px 5px 8px
 
 /* Targets small screens */
-@media (min-width: 768px) and (max-width: 992px)
+@media (min-width: 768px) and (max-width: 991px)
   .restaurants
     /* """ Restaurants """ card element */
     .restaurant
@@ -67,7 +67,6 @@
         &__new
           right: 15px
           margin: 20px 30px 15px 20px
-          padding: 5px 8px 5px 8px
 
 /* Targets tablets & desktops */
 @media(min-width: 992px)
@@ -90,8 +89,7 @@
           width: 100%
           margin-bottom: 30px
           &__new
-            margin: 20px -20px 15px 25px
-            padding: 5px 8px 5px 8px
+            margin-left: 15px
           img
             height: 300px
         &:nth-of-type(1)
